Fix navbar not showing

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,6 +3,7 @@
 .nav-container {
   position: absolute;
   left: 0;
+  top: 0;
   padding-top: 80px;
   width: 160px;
   height: calc(100vh - 80px);
